# coral_pose_detection_cpp

./: .gitignore  CMakeLists.txt  edgetpu_pose_detection_test.cpp  edgetpu_working_test.cpp  main.cpp  pose_detector_wrapper_tester.cpp
pose_angle_detection_src/: pose_angle_engine.cpp  pose_angle_engine.h
pose_detector_src/: pose_detector_wrapper.cpp  pose_detector_wrapper.h
process_camera_stream/: gst_pipeline_processor.cpp  gst_pipeline_processor.h
